--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -1,2 +1,13 @@
 #this workflow will build a python file then 
 #run a unit test routine on the file
+
+name: CI
+on:
+  push: 
+    branches: [master]
+  
+jobs:
+  build: 
+    runs-on: ubuntu-latest
+    run: python circles.py
+    
