--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -19,6 +19,7 @@ jobs:
         python-version: 3.8
         
     - name: running the file first
-      run: python circles.py
+      run: |
+        python circles.py
       
     
