--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -16,9 +16,9 @@ jobs:
     - name: setup python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: '3.8'
         
-    - name: running the file first
+    - name: run the app
       run: |
         python circles.py
       
