--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -20,5 +20,10 @@ jobs:
         
     - name: run the app
       run: |
-        pwd
+        cd /home/sherif/workspace/temporaryShit
+        git clone https://github.com/Sherif-Elshafei/my-practice.git
+        cd my-practice
+        python circle.py
+        
+        
         
