--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -23,5 +23,6 @@ jobs:
         cd /home/sherif/workspace/temporaryShit
         git clone https://github.com/Sherif-Elshafei/my-practice.git
         cd my-practice
+        pwd
         python circle.py
         
