--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -20,9 +20,9 @@ jobs:
         
     - name: run the app
       run: |
-        cd /home/sherif/workspace/temporaryShit
-        git clone https://github.com/Sherif-Elshafei/my-practice.git
-        cd my-practice
+        #cd /home/sherif/workspace/temporaryShit
+        #git clone https://github.com/Sherif-Elshafei/my-practice.git
+        #cd my-practice
         pwd
         python circle.py
         
