--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -24,5 +24,6 @@ jobs:
         #git clone https://github.com/Sherif-Elshafei/my-practice.git
         #cd my-practice
         pwd
-        python circle.py
+        ls
+        #python circle.py
         
