--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -20,8 +20,9 @@ jobs:
         
     - name: run the app
       run: |
-        pwd
+        rm my-practice/ -rf
         git clone https://github.com/Sherif-Elshafei/my-practice.git
+        cd my-practice
         pwd
         ls
         #python circles.py
