--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -20,10 +20,11 @@ jobs:
         
     - name: run the app
       run: |
-        rm my-practice/ -rf
+        cd /home/sherif/workspace/temporaryShit
+        rm * -rf
         git clone https://github.com/Sherif-Elshafei/my-practice.git
         cd my-practice
         pwd
         ls
-        #python circles.py
+        python circles.py
         
