--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -24,7 +24,5 @@ jobs:
         rm * -rf
         git clone https://github.com/Sherif-Elshafei/my-practice.git
         cd my-practice
-        pwd
-        ls
-        python circles.py
+        python -m unittest test_circles.py
         
