--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -20,9 +20,9 @@ jobs:
         
     - name: run the app
       run: |
-        cd /home/sherif/workspace/DirToRunApps
+        cd /home/sherif/workspace/hackerrank/DirToRunApps
         rm * -rf
         git clone https://github.com/Sherif-Elshafei/my-practice.git
         cd my-practice
-        python -m unittest test_circles.py
+        python -m unittest test_circles2.py
         
