--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -14,7 +14,7 @@ jobs:
 #       uses: actions/setup-python@v2
 #       with:
 #         python-version: '3.8'
-  build1: 
+  build: 
     runs-on: [self-hosted, linux]
     steps:
     - name: run the app
